--- a/app/templates/app/password_reset_complete.html
+++ b/app/templates/app/password_reset_complete.html
@@ -2,7 +2,7 @@
 {% load static %}
 {% block title %}Password Reset Complete{% endblock title %}
 {% block passwordchangedone %}
-    <div class="container">
+    <div class="container " style = "margin-top:83px;">
         <div class="row my-3">
             <div class="col-sm-6 offset-sm-3">
                 <h4 alert-heading>Reset Password Completed!</h4>
