--- a/app/templates/app/password_reset_confirm.html
+++ b/app/templates/app/password_reset_confirm.html
@@ -6,7 +6,7 @@
  <h3>Password Reset Confirm</h3>
   <div class="col-sm-2 border-end">
    <ul class="list-unstyled">
-    <li class="d-grid"><a href="{% url 'profile' %}" class="btn btn-primary">Change Password</a></li>
+    <li class="d-grid"><a href="#" class="btn btn-primary">Change Password</a></li>
    </ul>
   </div>
   <div class="col-sm-9 offset-sm-1">
