--- a/app/templates/app/password_change_done.html
+++ b/app/templates/app/password_change_done.html
@@ -6,7 +6,7 @@
     <h3>Welcome {{request.user}}</h3>
      <div class="col-sm-2 border-end">
       <ul class="list-unstyled">
-       <li class="d-grid"><a href="" class="btn btn-primary">Change Password</a></li>
+       <li class="d-grid"><a href="" class="btn btn-oultine-danger" style="background-color: #DC3545; color: white;">Change Password</a></li>
       </ul>
      </div>
      <div class="col-sm-9 offset-sm-1 text-center">
