--- a/app/static/app/css/style.css
+++ b/app/static/app/css/style.css
@@ -948,42 +948,131 @@ padding:10px;
   }
   
   
-  
-  .about {
+  /* ===footer==== */
+  .footer {
+    position: relative;
+    margin-top: 45px;
+    background: #DC3545;
+}
+
+.footer .container-fluid {
+    padding: 60px 0 0 0;
+}
+
+.footer .footer-info {
     position: relative;
     width: 100%;
-    padding: 45px 0 15px 0;
+    text-align: center;
 }
 
-.about .section-header {
-    margin-bottom: 30px;
-    margin-left: 0;
+.footer .footer-info h2 {
+    margin-bottom: 20px;
+    font-size: 30px;
+    font-weight: 700;
+    color: #ffffff;
 }
 
-.about .about-img img {
-    width: 100%;
-    border-radius: 5px;
-    margin-bottom: 30px;
-}
-
-.about .about-content {
-    margin-bottom: 30px;
-}
-
-.about .about-content ul {
-    margin: 0;
-    padding: 0;
-    list-style: none;
+.footer .footer-info h3 {
     margin-bottom: 25px;
+    font-size: 22px;
+    font-weight: 600;
+    color: #ffffff;
 }
 
-.about .about-content ul li {
-    margin-bottom: 5px;
+.footer .footer-menu {
+    width: 100%;
+    display: flex;
+    justify-content: center;
 }
 
-.about .about-content ul li i {
-    margin-right: 8px;
-    color: #E81C2E;
+.footer .footer-menu p {
+    color: #ffffff;
+    font-size: 22px;
+    font-weight: 600;
+    line-height: 20px;
+    padding: 0 15px;
+    border-right: 1px solid #ffffff;
 }
 
+.footer .footer-menu p:last-child {
+    border: none;
+}
 
+.footer .footer-social {
+    position: relative;
+    margin-top: 15px;
+}
+
+.footer .footer-social a {
+    display: inline-block;
+}
+
+.footer .footer-social a i {
+    margin-right: 15px;
+    font-size: 20px;
+    color: #ffffff;
+    transition: .3s;
+}
+
+.footer .footer-social a:last-child i {
+    margin: 0;
+}
+
+.footer .footer-social a:hover i {
+    color: #414141;
+}
+
+.footer .copyright {
+    position: relative;
+    text-align: center;
+    margin-top: 30px;
+    padding-top: 25px;
+    padding-bottom: 25px;
+}
+
+.footer .copyright::before {
+    position: absolute;
+    content: "";
+    width: 50%;
+    height: 1px;
+    top: 0;
+    left: 25%;
+    background: rgba(256, 256, 256, .2);
+}
+
+.footer .copyright p {
+    margin: 0;
+    color: #ffffff;
+}
+
+.footer .copyright .col-md-6:last-child p {
+    text-align: right;
+}
+
+.footer .copyright p a {
+    color: #ffffff;
+    font-weight: 600;
+}
+
+.footer .copyright p a:hover {
+    color: #414141;
+}
+
+@media (max-width: 575.98px) {
+    .footer .footer-info h2 {
+        margin-bottom: 20px;
+        font-size: 20px;
+        font-weight: 600;
+    }
+
+    .footer .footer-info h3 {
+        margin-bottom: 20px;
+        font-size: 16px;
+    }
+
+    .footer .footer-menu p {
+        font-size: 16px;
+        line-height: 16px;
+        padding: 0 5px;
+    }
+}
