--- a/app/templates/app/base.html
+++ b/app/templates/app/base.html
@@ -7,19 +7,18 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <!-- Bootstrap CSS -->
-    <link rel="stylesheet" href="{% static "app/css/bootstrap.min.css" %}">
-    <link rel="stylesheet" href="{% static "app/js/bootstrap.min.js" %}">
+    <link rel="stylesheet" href="{% static 'app/css/bootstrap.min.css' %}">
+    <link rel="stylesheet" href="{% static 'app/js/bootstrap.min.js' %}">
 
     <!--FontAwesome CSS-->
     <link rel="stylesheet" href="{% static 'app/css/all.min.css' %}">
     <!-- css style -->
-    <link rel="stylesheet" href="{% static "app/css/style.css" %}">
+    <link rel="stylesheet" href="{% static 'app/css/style.css' %}">
 
     <!-- extra css-->
     {% block extracss %}{% endblock extracss %}
     
-    <!-- Main JS -->
-    <link rel="stylesheet" href="{% static 'app/js/main.js' %}">
+    
 
     <title></title>
   </head>
@@ -165,6 +164,8 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
 
     <script src="{% static 'app/js/all.min.js' %}"></script>
+    <!-- Main JS -->
+    <link rel="stylesheet" href="{% static 'app/js/main.js' %}">
     
   </body>
 </html>
