--- a/app/templates/app/home.html
+++ b/app/templates/app/home.html
@@ -16,21 +16,21 @@
       <img src="{% static "app/image/black.jpg" %}" class="d-block w-100" alt="...">
       <div class="carousel-caption d-none d-md-block">
         <strong class="btn btn-light">BSc CSIT, BCA, BIT</strong>
-        <p>Some representative placeholder content for the first slide.</p>
+        <p>Available all the hand written notes, yearwise Board Questions, labsheet, Syllabus as well as Books</p>
       </div>
     </div>
     <div class="carousel-item">
       <img src="{% static "app/image/black.jpg" %}" class="d-block w-100" alt="...">
       <div class="carousel-caption d-none d-md-block">
-        <button class="btn btn-info">BSc CSIT, BCA, BIT</button>
-        <p style="color:#0DCAF0;">Some representative placeholder content for the second slide.</p>
+        <button class="btn btn-info">Tech Knowledge Through News</button>
+        <p style="color:#0DCAF0;">What's happening on earth about Technology?</p>
       </div>
     </div>
     <div class="carousel-item">
       <img src="{% static "app/image/black.jpg" %}" class="d-block w-100" alt="...">
       <div class="carousel-caption d-none d-md-block">
-        <button class="btn btn-danger">BSc CSIT, BCA, BIT</button>
-        <p style="color:#DC3545;">Some representative placeholder content for the third slide.</p>
+        <button class="btn btn-danger">Programming Language</button>
+        <p style="color:#DC3545;">Languages like Html, CSS, JS, PHP & Python (Django) will be updated soon...</p>
       </div>
     </div>
   </div>
@@ -56,19 +56,19 @@
                    <i class="fas fa-book"></i>                 
                   </div>
                   <div class="feature-text">
-                    <h3>Hello Mister</h3>
-                    <p style="color:black;">Hey bro How you doing?</p>
+                    <h3>Notes + Books + Question Bank</h3>
+                    <p style="color:black;">Faculty Of BSc CSIT, BCA, BIT</p>
                   </div>
               </div>
           </div>
           <div class="col-lg-4 col-md-12">
             <div class="feature-item">
                 <div class="feature-icon">
-                  <i class="fas fa-book"></i>
+                  <i class="far fa-newspaper"></i>
                 </div>
                 <div class="feature-text">
-                  <h3>Hello Mister</h3>
-                  <p style="color:black;">Hey bro How you doing?</p>
+                  <h3>Latest Technology News</h3>
+                  <p style="color:black;">Daily Tech Update</p>
                 </div>
             </div>
           </div>
@@ -78,8 +78,8 @@
                   <i class="fas fa-book"></i>
                 </div>
                 <div class="feature-text">
-                  <h3>Hello Mister</h3>
-                  <p style="color:black;">Hey bro How you doing?</p>
+                  <h3>Programming Language</h3>
+                  <p style="color:black;">will be updated later...</p>
                 </div>
             </div>
           </div>
