--- a/app/templates/app/passwordchange.html
+++ b/app/templates/app/passwordchange.html
@@ -7,7 +7,7 @@
     <h3>Welcome {{request.user}}</h3>
      <div class="col-sm-2 border-end">
       <ul class="list-unstyled">
-       <li class="d-grid"><a href="" class="btn btn-primary">Change Password</a></li>
+       <li class="d-grid"><a href="" class="btn btn-outline-danger" style="background-color: #DC3545; color: white;">Change Password</a></li>
       </ul>
      </div>
      <div class="col-sm-9 offset-sm-1">
@@ -19,7 +19,7 @@
             {{fm.label_tag}} {{fm}} <small class="text-danger">{{fm.errors|striptags}}</small><br>
         </div>
         {% endfor %}
-        <input type="submit" class="btn btn-primary mt-4" value="Save">
+        <input type="submit" class="btn btn-outline-danger mt-4" value="Save" style="background-color: #DC3545; color: white;">
         {% if form.non_field_errors %}
         {% for error in form.non_field_errors %}
           <p class="alert alert-danger my-3">{{error}}</p>
