--- a/app/templates/app/tech-news.html
+++ b/app/templates/app/tech-news.html
@@ -5,18 +5,20 @@
     
     <div class="container">
         <div class="row" style="margin-top:60px;">
-            {% for tech in tech_news %}
+            {% for tech in articles %}
             <div class="card" style="margin-top: 10px;">
                 <div class="row no-gutters">
                 <div class="col-md-4">
-                    <img src="{{tech.image.url}}" alt="" class="card-img-top">
+                    <img src="{{tech.urlToImage}}" alt="" class="card-img-top">
                 </div>
                 
                 <div class="col-md-8">
                     <div class="card-body">
                         <h5 class="card-title">{{tech.title}}</h5>
-                        <p class="card-text">{{tech.detail}}</p>
-                        <a href="{% url 'tech-detail' tech.id %}"><p class="btn btn-outline-danger" style="border-radius:20px 0px 20px 20px; margin-top: 10px; background-color: #DC3545 !important; color: white;">Read Full</p></a>
+                        <p class="card-text">{{tech.content}}</p>
+                        <p>Published At: {{tech.publishedAt}}</p>
+                        <a href="{{tech.url}}"><p class="btn btn-outline-danger" style="border-radius:20px 0px 20px 20px; margin-top: 10px; background-color: #DC3545 !important; color: white;">Read Full</p></a>
+                        
                     </div>
                 </div>
                 
